--- a/Knaeckebot/SequenceEditorControl.xaml
+++ b/Knaeckebot/SequenceEditorControl.xaml
@@ -136,7 +136,8 @@
                         </Grid.ColumnDefinitions>
 
                         <CheckBox Grid.Column="0" IsChecked="{Binding IsEnabled}" 
-                                 VerticalAlignment="Center" Margin="0,0,5,0"/>
+                                 VerticalAlignment="Center" Margin="0,0,5,0"
+                                 Checked="Action_Checked" Unchecked="Action_Unchecked"/>
 
                         <StackPanel Grid.Column="1">
                             <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
