Add multiline text support for text variables
- Applied the existing TextBoxMultilineStyle to TextValue TextBox
- Added tooltip indicating multiline support
- Ensures consistent text handling between Text and List variable types

--- a/Knaeckebot/SequenceVariablesControl.xaml
+++ b/Knaeckebot/SequenceVariablesControl.xaml
@@ -63,6 +63,8 @@
                                 <DataTemplate>
                                     <TextBox Text="{Binding TextValue, UpdateSourceTrigger=PropertyChanged}" 
                                              Width="110"
+                                             Style="{StaticResource TextBoxMultilineStyle}"
+                                             ToolTip="Supports multiline text"
                                              Visibility="{Binding Type, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter=Text}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
